# docs/swagger.json
@@ -17,7 +17,7 @@
                         "type": "string",
                         "default": "00000000-0000-0000-0000-000000000000",
                         "description": "ClientID",
-                        "name": "client_id",
+                        "name": "Client-Id",
                         "in": "header",
                         "required": true
                     },
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.FreePost"
+                            "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.FreePost"
                         }
                     }
                 ],
@@ -69,7 +69,7 @@
                         "type": "string",
                         "default": "00000000-0000-0000-0000-000000000000",
                         "description": "ClientID",
-                        "name": "client_id",
+                        "name": "Client-Id",
                         "in": "header",
                         "required": true
                     },
@@ -79,7 +79,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.RentPost"
+                            "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.RentPost"
                         }
                     }
                 ],
@@ -121,7 +121,7 @@
                         "type": "string",
                         "default": "00000000-0000-0000-0000-000000000000",
                         "description": "ClientID",
-                        "name": "client_id",
+                        "name": "Client-Id",
                         "in": "header",
                         "required": true
                     },
@@ -164,6 +164,12 @@
                         "name": "width",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Value of availability to filter by",
+                        "name": "availability",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -172,7 +178,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.ScooterGet"
+                                "$ref": "#/definitions/github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.ScooterGet"
                             }
                         }
                     },
@@ -199,7 +205,7 @@
         }
     },
     "definitions": {
-        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.FreePost": {
+        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.FreePost": {
             "type": "object",
             "required": [
                 "UUID"
@@ -210,7 +216,7 @@
                 }
             }
         },
-        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.RentPost": {
+        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.RentPost": {
             "type": "object",
             "required": [
                 "UUID",
@@ -233,7 +239,7 @@
                 }
             }
         },
-        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_model.ScooterGet": {
+        "github_com_NordSecurity-Interviews_BE-PatrykPasterny_internal_transfer_rest_model.ScooterGet": {
             "type": "object",
             "properties": {
                 "UUID": {
